feat：完成大多数钱功能，还有一些转账买币的功能，和bug

--- a/src/app.css
+++ b/src/app.css
@@ -123,3 +123,9 @@ input[type='number'] {
 .primaryButton:hover {
 	background-color: rgb(205 150 75)
 }
+
+
+
+
+
+/* dark:bg-white dark:text-zinc-950 bg-black text-gray-100 */
