--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,3 +14,23 @@
 		white-space: pre-wrap;
 	}
 }
+
+
+.border-primary {
+	border-color: rgba(184, 142, 86, 1);
+}
+
+/* 按钮颜色 */
+.primaryButton {
+  background-color: rgba(184, 142, 86, 1);
+
+}
+
+.primaryButton:hover {
+	background-color: rgb(205 150 75)
+}
+
+.primaryText {
+  color: rgba(184, 142, 86, 1);
+
+}
